tests/invalid_nodepend/bigtest.err_exp
bigtest.m:005: Error: module must start with a `:- module' declaration.
bigtest.m:005: Error: module `bigtest' should start with either an
bigtest.m:005:   `:- interface' or an `:- implementation' declaration.
bigtest.m:005:   The following assumes that the missing declaration is an
bigtest.m:005:   `:- implementation' declaration.
bigtest.m:005: Warning: the interface of module `bigtest' does not export
bigtest.m:005:   anything.
bigtest.m:005:   To be useful, a module should export something. A file should
bigtest.m:005:   contain at least one declaration other than `:- import_module'
bigtest.m:005:   in its interface section(s). This would normally be a
bigtest.m:005:   `:- pred', `:- func', `:- type', `:- inst' or `:- mode'
bigtest.m:005:   declaration.
bigtest.m:005: Error: `export_sym' is not a valid declaration type.
bigtest.m:006: Error: `export_pred' is not a valid declaration type.
bigtest.m:007: Error: `export_type' is not a valid declaration type.
bigtest.m:009: Error: clause for predicate `fact'/0
bigtest.m:009:   without corresponding `:- pred' declaration.
bigtest.m:009: Inferred :- pred fact.
bigtest.m:010: Syntax error at token ':-': operator precedence error.
bigtest.m:013: Error: `incorrect_declaration' is not a valid declaration type.
bigtest.m:015: Error: no mode declaration for predicate `p'/1.
bigtest.m:015:   (Use `--infer-modes' to enable mode inference.)
bigtest.m:030: Error: in definitions of equivalence types, the type name must
bigtest.m:030:   be followed by `==', not `='.
bigtest.m:030: On the left hand side of type definition: error: type parameters
bigtest.m:030:   must be variables, but `t3' and `(t1 + t2)' are not.
